# Spectral-Env-Core-v1.0

./: .gitignore  LICENSE.txt  LITE_VS_PRO_DESIGN.md  README.md  Spectral-Env-Core v1.0.ipynb  Your Trading AI is a Glass Cannon (and how to fix it).ipynb  pyproject.toml  train.py
spectral_env_core/: __init__.py  backtest.py  callbacks.py  engine.py  engine2.py  est_env_params.py  extractors.py  indicators.py  journal.py  wrappers.py
spectral_env_core/history/: engine.py
tutorials/: 01_infinite_data.ipynb  02_market_realism.ipynb  03_multi_asset_portfolios.ipynb  04_crypto_fractional.ipynb  05_parameter_calibration.ipynb  06_parallel_training.ipynb  07_training_toolkit.ipynb  08_indicator_plugins.ipynb  09_backtesting.ipynb
