[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral_env_core"
version = "0.1.0"
description = "Financial pricing data feature store and RL environment"
dependencies = [
    "gymnasium",
    "numpy",
    "stable-baselines3",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]